--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
    background-size: cover;
    background-position: right;
    background-repeat: no-repeat;
-   height: 100vh;
+   min-height: 100vh;
    color: var(--text-color);
 }
 
